Updated appspec.yml, buildspec.yml

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,5 @@ Resources:
   - PatientRecordService:
       Type: AWS::Lambda::Function
       Properties:
-        Name: patient-record-service-${STAGE}   # Lambda function name
-        Alias: ${STAGE}                         # UAT or PROD alias
-        CurrentVersion: 1                       # Version (optional for first deployment)
+        Name: patient-record-service-${STAGE}
+        Alias: ${STAGE}
