--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+      nodejs: 18   # Add Node.js version to enable npm
     commands:
       - echo "Installing dependencies..."
       - pip install -r requirements.txt -t src/
