--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,20 +4,13 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+      nodejs: 18   # Add Node.js version to enable npm
     commands:
-      - echo "============================================="
-      - echo "Installing Node.js LTS version..."
-      - curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -  # Install Node.js 18.x LTS
-      - yum install -y nodejs
-      - echo "Verifying Node.js and npm versions:"
-      - node -v
-      - npm -v
-      - echo "============================================="
-      - echo "Clearing NPM cache to avoid archive issues..."
-      - npm cache clean --force
-      - echo "Installing Serverless Framework v3.38.0..."
-      - npm install -g serverless@3.38.0
-      - echo "============================================="
+      - echo "Installing dependencies..."
+      - pip install -r requirements.txt -t src/
+      - echo "Installing Serverless Framework..."
+      - npm install -g serverless@3.38.0 --save-exact
+
   build:
     commands:
       - echo "============================================="
