--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,13 +4,24 @@ phases:
   install:
     runtime-versions:
       python: 3.11
-      nodejs: 18   # Add Node.js version to enable npm
-    commands:
-      - echo "Installing dependencies..."
-      - pip install -r requirements.txt -t src/
-      - echo "Installing Serverless Framework..."
-      - npm install -g serverless@3.38.0 --save-exact
-
+      commands:
+        - echo "============================================="
+        - echo "Installing Node.js via NVM for reliability..."
+        - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+        - export NVM_DIR="$HOME/.nvm"
+        - . "$NVM_DIR/nvm.sh"
+        - nvm install 18
+        - nvm use 18
+        - echo "Verifying Node.js and npm versions:"
+        - node -v
+        - npm -v
+        - echo "============================================="
+        - echo "Clearing NPM cache to avoid archive issues..."
+        - npm cache clean --force
+        - echo "Retrying installation of Serverless Framework..."
+        - npm install -g serverless@3.38.0 || npm install -g serverless@3.38.0
+        - echo "Serverless Framework installed successfully!"
+        - serverless --version
   build:
     commands:
       - echo "============================================="
