--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,17 +7,11 @@ phases:
       commands:
         - echo "============================================="
         - echo "Installing Node.js via NVM for reliability..."
-        - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash && \
-          export NVM_DIR="$HOME/.nvm" && \
-          [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" && \
-          nvm install 18 && \
-          nvm use 18
+        - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash && export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" && nvm install 18 && nvm use 18
         - echo "Verifying Node.js and npm versions:" && node -v && npm -v
         - echo "============================================="
-        - npm update -g npm
         - echo "Clearing NPM cache to avoid archive issues..." && npm cache clean --force
-        - echo "Retrying installation of Serverless Framework..." && \
-          npm install -g serverless@3.38.0 || npm install -g serverless@3.38.0
+        - echo "Retrying installation of Serverless Framework..." && npm install -g serverless@3.38.0 || npm install -g serverless@3.38.0
         - echo "Serverless Framework installed successfully!" && serverless --version
   build:
     commands:
