--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.11
-      nodejs: 18  # Use Node.js 18 directly
+      nodejs: 18
     commands:
       - echo "============================================="
       - echo "Verifying Node.js and npm versions:"
@@ -13,21 +13,23 @@ phases:
       - echo "Clearing NPM cache to avoid archive issues..."
       - npm cache clean --force
       - echo "Installing Serverless Framework..."
-      - npm install -g serverless@3.38.0 || npm install -g serverless@3.38.0
+      - npm install serverless@3.38.0 --save-exact
       - echo "Serverless Framework installed successfully!"
-      - serverless --version
-      -
+      - npx serverless --version
+
   build:
     commands:
       - echo "============================================="
       - echo "DEBUG - Checking STAGE environment variable..."
       - echo "STAGE value is - '$STAGE'"
       - echo "============================================="
+      - echo "Installing Python dependencies..."
+      - pip install -r requirements.txt -t src/
       - echo "Zipping the Lambda function code..."
       - cd src && zip -r ../patient_record_service.zip . && cd ..
       - echo "---------------------------------------------"
       - echo "Deploying to AWS Lambda using Serverless..."
-      - serverless deploy --stage $STAGE
+      - npx serverless deploy --stage $STAGE
       - echo "---------------------------------------------"
       - echo "Publishing Lambda function version..."
       - LAMBDA_VERSION=$(aws lambda publish-version \
@@ -37,8 +39,7 @@ phases:
       - echo "Published Lambda Version - $LAMBDA_VERSION"
       - echo "============================================="
       - echo "Updating AppSpec file with STAGE and VERSION..."
-      - sed "s/\${STAGE}/$STAGE/g; s/\${VERSION}/$LAMBDA_VERSION/g" appspec.yml > appspec-resolved.yml
-      - mv appspec-resolved.yml appspec.yml
+      - sed -i "s/\${STAGE}/$STAGE/g; s/\${VERSION}/$LAMBDA_VERSION/g" appspec.yml
       - echo "Final appspec.yml file content:"
       - cat appspec.yml
       - echo "Build stage completed successfully."
