--- a/serverless.yml
+++ b/serverless.yml
@@ -2,28 +2,28 @@ service: patient-record-service
 
 provider:
   name: aws
-  runtime: python3.11                # Specify Python runtime
-  region: ap-south-1                 # AWS region (e.g., Mumbai)
-  stage: ${opt:stage, 'dev'}         # Stage dynamically set (default: 'dev')
-  deploymentBucket:                  # (Optional) Use a custom deployment bucket
-    name: my-patient-record-service-pipeline-artifacts
-  environment:                       # Environment variables for Lambda
-    STAGE: ${opt:stage, 'dev'}       # Pass stage value to Lambda environment
+  runtime: python3.11
+  region: ap-south-1
+  stage: ${opt:stage, 'dev'}
+  deploymentBucket:
+    name: ${self:custom.deploymentBucket}
+  environment:
+    STAGE: ${self:provider.stage}
 
 functions:
   patientServiceHandler:
-    handler: patient_record_service.lambda_handler   # Lambda handler
-    name: patient-record-service-${self:provider.stage}  # Function name with stage
+    handler: patient_record_service.lambda_handler
+    name: patient-record-service-${self:provider.stage}
     description: "Patient Record Service Lambda for ${self:provider.stage} environment"
     events:
       - http:
           path: patient
           method: any
-          cors: true                  # Enable CORS for API Gateway
+          cors: true
 
 package:
-  individually: true                  # Package only the files needed for the function
-  exclude:                            # Exclude unnecessary files
+  individually: true
+  exclude:
     - "node_modules/**"
     - ".git/**"
     - "buildspec.yml"
@@ -31,7 +31,7 @@ package:
     - "*.md"
 
 plugins:
-  - serverless-deployment-bucket      # Plugin for managing deployment bucket (optional)
+  - serverless-deployment-bucket
 
 custom:
-  deploymentBucket: patient-record-service-deployments  # Custom bucket name
+  deploymentBucket: patient-record-service-deployments-${self:provider.stage}
