--- a/appspec.yml
+++ b/appspec.yml
@@ -3,9 +3,6 @@ Resources:
   - PatientRecordService:
       Type: AWS::Lambda::Function
       Properties:
-        Name: "patient-record-service-${STAGE}"
-        Alias: "${STAGE}"
-        CurrentVersion: "${VERSION}"
-Hooks:
-  - BeforeAllowTraffic: "LambdaFunctionToValidateBeforeTrafficShift"
-  - AfterAllowTraffic: "LambdaFunctionToValidateAfterTrafficShift"
+        Name: patient-record-service-${STAGE}
+        Alias: ${STAGE}
+        CurrentVersion: ${VERSION}
