--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,9 @@ phases:
       - npm cache clean --force
       - echo "Installing Serverless Framework..."
       - npm install -g serverless
-      - echo "Serverless Framework installed successfully!"
+      - echo "Installing Serverless Deployment Bucket Plugin..."
+      - npm install -g serverless-deployment-bucket
+      - echo "Serverless Framework and required plugin installed successfully!"
       - serverless --version
 
   build:
