--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,10 +38,7 @@ phases:
       - serverless deploy --stage $STAGE
       - echo "---------------------------------------------"
       - echo "Publishing Lambda function version..."
-      - LAMBDA_VERSION=$(aws lambda publish-version \
-          --function-name patient-record-service-$STAGE \
-          --query Version \
-          --output text)
+      - LAMBDA_VERSION=$(aws lambda publish-version --function-name patient-record-service-$STAGE --query Version --output text)
       - echo "Published Lambda Version - $LAMBDA_VERSION"
       - echo "============================================="
       - echo "Updating AppSpec file with STAGE and VERSION..."
@@ -50,7 +47,6 @@ phases:
       - echo "Final appspec.yml file content:"
       - cat appspec.yml
       - echo "Build stage completed successfully."
-
 artifacts:
   files:
     - appspec.yml
