--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,45 +8,44 @@ phases:
   install:
     runtime-versions:
       python: 3.11
-      nodejs: 18  # Use Node.js 18 directly
+      nodejs: 18
     commands:
       - echo "============================================="
       - echo "Verifying Node.js and npm versions:"
       - node -v && npm -v
-      - echo "============================================="
-      - echo "Clearing NPM cache to avoid archive issues..."
+      - echo "Clearing NPM cache..."
       - npm cache clean --force
       - echo "Installing Serverless Framework..."
       - npm install -g serverless
-      - echo "Installing Serverless Deployment Bucket Plugin locally..."
+      - echo "Installing required plugins..."
       - npm install serverless-deployment-bucket
-      - echo "Serverless Framework and required plugin installed successfully!"
       - serverless --version
+      - echo "============================================="
 
   build:
     commands:
-      - echo "============================================="
-      - echo "DEBUG - Checking STAGE environment variable..."
-      - echo "STAGE value is - '$STAGE'"
-      - echo "============================================="
-      - echo "Authenticating Serverless Framework using access key..."
+      - echo "DEBUG - Checking STAGE variable - '$STAGE'"
       - export SERVERLESS_ACCESS_KEY=${SERVERLESS_ACCESS_KEY}
-      - echo "Zipping the Lambda function code..."
+      - echo "Zipping the Lambda function..."
       - cd src && zip -r ../patient_record_service.zip . && cd ..
-      - echo "---------------------------------------------"
-      - echo "Deploying to AWS Lambda using Serverless Framework..."
+
+      - echo "Deploying Lambda with Serverless Framework..."
       - serverless deploy --stage $STAGE
-      - echo "---------------------------------------------"
+
       - echo "Publishing Lambda function version..."
       - LAMBDA_VERSION=$(aws lambda publish-version --function-name patient-record-service-$STAGE --query Version --output text)
-      - echo "Published Lambda Version - $LAMBDA_VERSION"
-      - echo "============================================="
+      - echo "Lambda version published - $LAMBDA_VERSION"
+
+      - echo "Creating/Updating Lambda alias..."
+      - aws lambda update-alias --function-name patient-record-service-$STAGE --name $STAGE --function-version $LAMBDA_VERSION || aws lambda create-alias --function-name patient-record-service-$STAGE --name $STAGE --function-version $LAMBDA_VERSION
+      - echo "Lambda alias '$STAGE' updated to version - $LAMBDA_VERSION"
+
       - echo "Updating AppSpec file with STAGE and VERSION..."
       - sed "s/\${STAGE}/$STAGE/g; s/\${VERSION}/$LAMBDA_VERSION/g" appspec.yml > appspec-resolved.yml
       - mv appspec-resolved.yml appspec.yml
-      - echo "Final appspec.yml file content:"
+      - echo "Updated AppSpec.yml:"
       - cat appspec.yml
-      - echo "Build stage completed successfully."
+
 artifacts:
   files:
     - appspec.yml
