--- a/buildspec.yml
+++ b/buildspec.yml
@@ -45,7 +45,7 @@ phases:
       - echo "Lambda alias '$STAGE' updated to version - $LAMBDA_VERSION"
 
       - echo "Updating AppSpec file with STAGE and VERSION..."
-      - sed "s/\${STAGE}/$STAGE/g; s/\${VERSION}/$LAMBDA_VERSION/g" appspec.yml | tr -d '\r' | tr -d '\u00A0' > appspec-resolved.yml
+      - sed "s/\${STAGE}/$STAGE/g; s/\${VERSION}/$LAMBDA_VERSION/g" appspec.yml | tr -d '\r' | tr -d '\u00A0' | sed 's/[[:space:]]\{2,\}/ /g' > appspec-resolved.yml
       - mv appspec-resolved.yml appspec.yml
       - echo "Updated AppSpec.yml:"
       - cat appspec.yml
